# concraft-multiservice

./: .gitignore  INSTALL-LOG.md  README.md  concraft-multiservice.cabal
thrift/: .gitignore  multiservice.thrift  subservices.thrift  types.thrift
tools/: concraft-multiservice.hs
